kustom-kafka-sizing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-sizing
spec:
  replicas: 1
  template:
    spec: # Pod spec
      containers:
      - name: webcontainer
        image: "quay.io/andyyuen/kafka-sizing:latest"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "200Mi" 
            cpu: "100m"
          limits:
            memory: "800Mi"
            cpu: "500m"
